# rag-chat-with-docs

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SPEC-STREAMLIT-DEPLOY.md  SPEC.md  app.py  pyproject.toml  requirements.txt
.claude/skills/verify/: SKILL.md
data/: corpus_embeddings.json
docs/: architecture.mmd
eval/: golden.jsonl
examples/: handbook.md  roasting.md
scripts/: build_corpus_snapshot.py
src/ragchat/: __init__.py  _gemini.py  cli.py  config.py  embed.py  eval.py  ingest.py  models.py  rag.py  store.py
tests/: test_embed.py  test_gemini_backoff.py  test_ingest.py  test_snapshot.py
