[project]
name = "ragchat"
version = "0.1.0"
description = "Chat with your documents: a small, production-literate RAG system with citations and evaluation, on Google Gemini."
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "chromadb>=0.5",
    "pypdf>=4.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
rag = "ragchat.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragchat"]

[dependency-groups]
dev = ["ruff>=0.6", "pytest>=8.0"]
